fix(lis-patient): fix JPQL query operator precedence and clean up unused imports
- Fix findDuplicates query to properly group OR conditions within
  branchId/isDeleted filter (was leaking records across branches)
- Remove unused DuplicateResourceException import
- Replace Collections.emptyList() with List.of() for Java 21 consistency

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>